[gd_scene format=3 uid="uid://y4uxo0hc2fnk"]

[ext_resource type="Script" uid="uid://b82cgkqf1km7d" path="res://game/scenes/ui/game_over_screen.gd" id="1_go"]
[ext_resource type="Script" uid="uid://cmo5qw3rubish" path="res://addons/my-ecosystem-template/buttons/anim_button.gd" id="2_5mgb1"]

[node name="GameOverScreen" type="Control" unique_id=1722147088]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_go")

[node name="Panel" type="Panel" parent="." unique_id=303583396]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1558505619]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
theme_override_constants/separation = 20
alignment = 1

[node name="GameOverLabel" type="Label" parent="VBoxContainer" unique_id=1711794204]
layout_mode = 2
theme_override_font_sizes/font_size = 112
text = "GAME_OBJECTIVE_GAMEOVER"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="VBoxContainer" unique_id=1289678357]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Score: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="VBoxContainer" unique_id=1345068268]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Best: 0"
horizontal_alignment = 1

[node name="NewBestLabel" type="Label" parent="VBoxContainer" unique_id=634531631]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 88
text = "NEW BEST!"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer" unique_id=1033956169]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="RestartButton" type="Button" parent="VBoxContainer" unique_id=1531771199]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "MENU_LABEL_PLAY_AGAIN"

[node name="ShareButton" type="Button" parent="VBoxContainer" unique_id=1780534056]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Share"
script = ExtResource("2_5mgb1")
metadata/_custom_type_script = "uid://cmo5qw3rubish"

[node name="MenuButton" type="Button" parent="VBoxContainer" unique_id=983465033]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "MENU_LABEL_RETURN_MAIN"
script = ExtResource("2_5mgb1")
metadata/_custom_type_script = "uid://cmo5qw3rubish"
